feat: show transaction history on ParcelDetailPage

--- a/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelActions/ParcelActions.css
+++ b/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelActions/ParcelActions.css
@@ -1,6 +1,3 @@
-.ParcelActions {
-  margin-bottom: 15px;
-}
-.ParcelActions .ui.button + .ui.button {
+.ParcelActions a + a {
   margin-left: 15px;
 }
