--- a/webapp/src/components/ParcelDetailPage/ParcelDetailPage.css
+++ b/webapp/src/components/ParcelDetailPage/ParcelDetailPage.css
@@ -41,3 +41,62 @@
 .ParcelDetailPage .parcel-owner-container {
   text-align: right !important;
 }
+
+.ParcelDetail .parcel-detail-row {
+  margin-bottom: 2em;
+}
+
+.ParcelDetail .parcel-actions {
+  display: flex !important;
+  flex-flow: row nowrap;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.ParcelDetail .address-wrapper {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.ParcelDetail .transaction-history-header {
+  background-color: var(--darker-gray);
+  border-radius: 10px 10px 0px 0px;
+  text-transform: uppercase;
+  color: var(--gray);
+}
+
+.ParcelDetail h3 {
+  font-family: var(--font-family) !important;
+}
+
+.ParcelDetail .transaction-history-entry {
+  background-color: var(--darker-gray);
+}
+
+.ParcelDetail .transaction-history-entry:last-child {
+  border-radius: 0px 0px 10px 10px;
+}
+
+.ParcelDetail .transaction-history-header,
+.ParcelDetail .transaction-history-entry {
+  margin: 0em 1em;
+}
+
+.ParcelDetail .address-wrapper .AddressBlock {
+  flex: none;
+  margin-right: 0.5em;
+}
+
+@media (max-width: 768px) {
+  .ParcelDetail .address-wrapper .short-address {
+    display: none;
+  }
+}
+
+.ParcelDetail .time-left .PublicationExpiration {
+  font-size: 20px;
+  display: block;
+  color: var(--gray);
+}
