--- a/webapp/src/themes/variables.css
+++ b/webapp/src/themes/variables.css
@@ -8,6 +8,7 @@
   --light-gray: #ededed;
   --gray: #8f9199;
   --dark-gray: #2e3447;
+  --darker-gray: #181b26;
 
   --light-green: #d1eee6;
   --green: #30d7a9;
@@ -30,5 +31,6 @@
   --navbar-height: 94px;
   --footer-height: 80px;
 
-  --font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+  --font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, 'Helvetica Neue', Arial, sans-serif;
 }
