feat: mobile navbar

--- a/webapp/src/components/AtlasPage/Map/Map.css
+++ b/webapp/src/components/AtlasPage/Map/Map.css
@@ -48,3 +48,9 @@
   float: right;
   margin-right: 20px;
 }
+
+@media (max-width: 768px) {
+  .leaflet-bottom .leaflet-control {
+    display: none;
+  }
+}
