--- a/webapp/src/components/TransferManaPage/TransferManaForm/TransferManaForm.css
+++ b/webapp/src/components/TransferManaPage/TransferManaForm/TransferManaForm.css
@@ -1,14 +1,5 @@
-.TransferManaForm {
-  min-width: 400px;
-}
-
 .TransferManaForm .ui.button + .ui.button {
   margin-left: 20px;
-}
-
-.TransferManaForm .ui.input.address-input {
-  max-width: 450px !important;
-  display: block;
 }
 
 .TransferManaForm .ui.input.address-input input {
@@ -22,4 +13,10 @@
 
 .TransferManaForm .transfer-warning.error {
   color: var(--red);
+}
+
+@media (min-width: 768px) {
+  .TransferManaForm {
+    min-width: 400px;
+  }
 }
