feat: improve padding on mobile for Activity screen

--- a/webapp/src/components/ActivityPage/Transaction/Transaction.css
+++ b/webapp/src/components/ActivityPage/Transaction/Transaction.css
@@ -53,6 +53,9 @@
   .Transaction .mini.circle {
     display: none;
   }
+  .Transaction .transaction-avatar {
+    margin-left: 0px;
+  }
 }
 
 @media (min-width: 768px) {
