feat: transaction history + buttons for mobile

--- a/webapp/src/components/ParcelDetailPage/ParcelDetailPage.css
+++ b/webapp/src/components/ParcelDetailPage/ParcelDetailPage.css
@@ -103,4 +103,8 @@
   .ParcelDetail .address-wrapper .short-address {
     display: none;
   }
+
+  .ParcelDetailPage .parcel-owner-container {
+    text-align: left !important;
+  }
 }
