--- a/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelActions/ParcelActions.css
+++ b/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelActions/ParcelActions.css
@@ -1,3 +1,18 @@
 .ParcelActions a + a {
   margin-left: 15px;
 }
+
+@media (max-width: 768px) {
+  .ParcelActions {
+    width: 100%;
+  }
+
+  .ParcelActions .button {
+    width: 100%;
+    margin-bottom: 1em;
+  }
+
+  .ParcelActions a + a {
+    margin-left: 0px;
+  }
+}
