--- a/webapp/src/components/SettingsPage/SettingsPage.css
+++ b/webapp/src/components/SettingsPage/SettingsPage.css
@@ -36,3 +36,17 @@
   margin-right: 40px;
   box-shadow: 0px 5px 15px 5px rgba(0, 0, 0, 0.3);
 }
+
+@media (max-width: 768px) {
+  .SettingsPage .row {
+    flex-flow: column nowrap;
+  }
+
+  .blockie {
+    margin: 0 auto 50px;
+  }
+
+  .SettingsPage .AddressBlock {
+    margin-right: 0px;
+  }
+}
