--- a/webapp/src/components/BuyManaPage/BuyManaForm/BuyManaForm.css
+++ b/webapp/src/components/BuyManaPage/BuyManaForm/BuyManaForm.css
@@ -42,3 +42,16 @@
     min-width: 550px;
   }
 }
+
+@media (max-width: 768px) {
+  .BuyManaForm .footer {
+    display: flex;
+    flex-flow: column-reverse nowrap;
+  }
+
+  .BuyManaForm .footer .button {
+    margin-top: 1em;
+    margin-left: 0em !important;
+    width: 100%;
+  }
+}
