--- a/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelTags/ParcelTags.css
+++ b/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelTags/ParcelTags.css
@@ -2,28 +2,52 @@
   margin-right: 48px;
 }
 
-.ParcelTags .Icon {
-  margin-right: 16px;
-}
-
-.ParcelTags .Icon,
+.ParcelTags .tag-icon,
 .ParcelTags .tag,
 .ParcelTags .tag-information {
   float: left;
 }
 
+.ParcelTags .tag-icon {
+  width: 48px;
+  height: 48px;
+  margin-right: 16px;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  box-shadow: inset 0 0 16px 0 rgba(0, 0, 0, 0.16);
+}
+
+.ParcelTags .tag-icon-road {
+  background: #838aa3;
+}
+
+.ParcelTags .tag-icon-plaza {
+  background: #8dbe92;
+}
+
+.ParcelTags .tag-icon-district {
+  background: #7479ff;
+}
+
 .ParcelTags .tag h4 {
-  margin-top: 0;
-  margin-bottom: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .ParcelTags .tag p {
   color: var(--gray);
 }
 
-
 @media (max-width: 768px) {
   .ParcelDetail .tag {
+    margin-bottom: 24px;
     width: 100%;
+  }
+
+  .ParcelDetail .tag:bottom-child {
+    margin-bottom: 0;
   }
 }
