feat: buy MANA using Bancor (#185)
* feat: buy MANA using Bancor

* fix: open widget as fullscreen instead of popup to fix MetaMask

* feat: convert ETH to MANA from within marketplace

* fix: gasLimit => gas

* fix: update balance when tx is confirmed

* fix: refetch balance after buying mana

* chore: removed unused file

* chore: removed unused env var

* fix: idle tx warning

* feat: mobile styles

* feat: pincha aqui para comprar MANA

* chore: remove unused util

* chore: moved ETH balance to global state

* chore: removed !importants

* chore: removed !importants 2

--- a/webapp/src/components/TransferManaPage/TransferManaPage.css
+++ b/webapp/src/components/TransferManaPage/TransferManaPage.css
@@ -1,9 +1,19 @@
-.big-mana-icon .ManaIcon {
-  margin-right: 0 !important;
+.big-mana-icon .Mana .ManaIcon {
+  margin-right: 0px;
 }
 
 @media (max-width: 768px) {
   .big-mana-icon {
     margin: 0 auto 50px;
+  }
+
+  .TransferManaForm .footer {
+    display: flex;
+    flex-flow: column-reverse nowrap;
+  }
+
+  .TransferManaForm .footer .button {
+    margin-top: 1em;
+    width: 100%;
   }
 }
