--- a/webapp/src/components/DashboardPage/DashboardPage.css
+++ b/webapp/src/components/DashboardPage/DashboardPage.css
@@ -27,9 +27,9 @@
 }
 
 .DashboardPage .DashboardStats .ui.card .content .description {
-  font-size: 19px;
+  font-size: 30px;
   font-weight: bold;
-  margin-top: 10px;
+  margin: 20px 0px 10px 0px;
 }
 
 .DashboardPage .DashboardPublications .ui.card .content .description {
