--- a/webapp/src/components/ParcelCard/ParcelCard.css
+++ b/webapp/src/components/ParcelCard/ParcelCard.css
@@ -41,18 +41,19 @@
   font-size: 15px;
   margin-bottom: 5px;
   color: var(--text);
+  overflow: hidden;
+  display: flex;
+}
+
+.ParcelCard .name {
+  margin-right: 8px;
   text-overflow: ellipsis;
   overflow: hidden;
-  width: 70%;
   white-space: nowrap;
 }
 
-.ParcelCard .mana {
-  font-size: 14px;
-  top: 15px;
-  right: 15px;
-  position: absolute;
-  display: inline;
+.ParcelCard .Mana {
+  margin-left: auto;
 }
 
 .ParcelCard .footer {
