--- a/webapp/src/components/CreateEstatePage/CreateEstate/EstateActions/EstateActions.css
+++ b/webapp/src/components/CreateEstatePage/CreateEstate/EstateActions/EstateActions.css
@@ -1,4 +1,4 @@
-.EstateActions a + a {
+.EstateActions .button + .button {
   margin-left: 15px;
 }
 
@@ -12,7 +12,7 @@
     margin-bottom: 1em;
   }
 
-  .EstateActions a + a {
+  .EstateActions .button + .button {
     margin-left: 0px;
   }
 }
