--- a/webapp/src/components/BuyParcelByMortgagePage/MortgageForm/MortgageForm.css
+++ b/webapp/src/components/BuyParcelByMortgagePage/MortgageForm/MortgageForm.css
@@ -40,3 +40,11 @@
   border-bottom: 2px solid var(--dark-gray);
 
 }
+
+.MortgageForm .ui.error.message{
+  max-width: 500px;
+}
+
+.MortgageForm .ui.error.message div {
+   word-wrap: break-word;
+ }
