feat: mortgage detail styling

--- a/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelMortgage/ParcelMortgage.css
+++ b/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelMortgage/ParcelMortgage.css
@@ -4,6 +4,9 @@
   text-align: center;
 }
 
+.ParcelMortgageDetail .row{
+  align-items: center;
+}
 
 .ParcelMortgageDetail.paid{
   border: solid 2px transparent;
