feat: paid mortgages & claim (#244)
* feat: mortgage request (#222)

* feat: approve mortgage contract checkbox for mana and rcn

* feat: approve mortgage contract checkbox for mana and rcn

* fix: prettier

* feat: approvals

* feat: approvals

* feat: update checkbox when tx is completed

* fix: lint issues

* feat: mortgage form & monitor

* feat: monitor & right values on mortgage request

* feat: WIP mortgage details & cancel mortgage monitor

* feat: profile - show mortgages

* feat: mortgage request form validate fields

* feat: generic expires & request one mortgage per borrower-parcel

* feat: mortgage form validation & add translations

* feat: add chinese and korean translations

* fix: lint errors

* fix: lint & add more tries to renew db

* fix: lint

* test: mortgage queries

* test: mortgage queries

* fix: lint & circle v2

* chore: circle tests

* chore: circle build

* chore: circle build

* chore: circle build

* chore: circle build

* chore: circle build

* chore: circle build

* chore: ignore webapp for root lint

* feat: add translation for mortgage manager and creator & instance erc20token as rcnToken

* reafactor: separate mortgages from parcels

* refactor: asset_id insead of x and y, mortgage tests

* feat: update decentraland-eth version

* fix: add build folder to eslintignore

* fix: do not lint webapp at root

* feat: add db utils, support status array at mortgages requestt

* fix: remove duplicated keys by merge

* feat: reselector for mortgagesArray

* fix: lint webapp

* feat: show mortgages feature when env is development

* add startMortgage event, and show mortgages only when publication is open

* feat: show claimed mortgages

* feat: feature flag (#236)

- Feature Flag to show/hide experimental features

* fix: get mortgages query

* feat: asset type & mortgage status

* feat: show mortgages at corret borrower

* fix: remove hardcoded

--- a/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelMortgage/ParcelMortgage.css
+++ b/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelMortgage/ParcelMortgage.css
@@ -1,8 +1,42 @@
-.parcelMortgageDetail .open p{
-  color: var(--error);
+.ParcelMortgageDetail{
+  border-radius: 12px;
+  background-color: #181f33;
+  text-align: center;
+}
+
+.ParcelMortgageDetail.ui.grid>.row{
+  align-items: center;
+}
+
+.ParcelMortgageDetail.paid{
+  border: solid 2px transparent;
+  background-image: linear-gradient(#181f33, #181f33), linear-gradient(to top, #ff9a74, #ff0044);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+}
+
+.ParcelMortgageDetail p {
+  font-size: 18px;
+}
+
+.ParcelMortgageDetail .pending p {
+  color: var(--orange);
   text-transform: capitalize;
 }
 
-.parcelMortgageDetail .mortgage-amount-icon{
-  font-size: 15px;
+.ParcelMortgageDetail .ongoing p{
+  color: var(--light-blue);
+  text-transform: capitalize;
+}
+
+.ParcelMortgageDetail .mortgage-amount-icon{
+  font-size: 18px;
+}
+
+.ParcelMortgageDetail .expires-at span{
+  color: var(--gray)
+}
+
+.ParcelMortgageDetail .cta{
+  margin-left: auto;
 }
