feat: clear activity log (#269)
* feat: create clear tx history button

* feat: run translate script and fix [es]

* feat: render clear button only if there are transactions

* fix: finish some change requests from reviews

* fix: set activity page variables to follow the design

* feat: create reusable Prompt component

* feat: show clear confirmation prompt on activity page

* feat: run translation script

* feat: adjust modal to current design and use translations

* fix: styles

* feat: simplify clear flow

--- a/webapp/src/components/ActivityPage/ActivityPage.css
+++ b/webapp/src/components/ActivityPage/ActivityPage.css
@@ -4,9 +4,16 @@
 }
 
 .ActivityPage .section-title {
+  margin-bottom: 6px;
+  font-size: 32px;
+  font-weight: 600;
+  display: flex;
+}
+
+.ActivityPage .section-subtitle {
   margin-bottom: 10px;
-  font-size: 22px;
-  font-weight: bold;
+  font-size: 17px;
+  font-weight: 400;
 }
 
 .ActivityPage .empty {
@@ -22,8 +29,17 @@
   margin-top: 50px;
 }
 
-.ActivityPage .pending-transaction-list {
-  margin-bottom: 30px;
+.ActivityPage .transaction-list {
+  margin-top: 48px;
+}
+
+.ActivityPage .clear-button {
+  margin-left: auto;
+}
+
+.ActivityPage .modal-title {
+  font-size: 22px;
+  font-weight: bold;
 }
 
 @media (max-width: 768px) {
