doc: add notation

--- a/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelMortgage/ParcelMortgage.css
+++ b/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelMortgage/ParcelMortgage.css
@@ -38,6 +38,10 @@
   color: var(--gray);
 }
 
+.ParcelMortgageDetail p::first-letter {
+  text-transform: uppercase;
+}
+
 .ParcelMortgageDetail .cta {
   margin-left: auto;
 }
