--- a/webapp/src/components/ParcelCard/ParcelCard.css
+++ b/webapp/src/components/ParcelCard/ParcelCard.css
@@ -14,6 +14,10 @@
   color: var(--light-blue);
 }
 
+.ParcelCard .mortgage-status.defaulted {
+  color: var(--text);
+}
+
 @media (min-width: 480px) {
   .ParcelCard {
     width: calc(50% - 14px) !important;
