--- a/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelMortgage/ParcelMortgage.css
+++ b/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelMortgage/ParcelMortgage.css
@@ -17,7 +17,7 @@
 }
 
 .ParcelMortgageDetail p {
-  font-size: 18px;
+  font-size: 1em;
 }
 
 .ParcelMortgageDetail .pending p {
@@ -27,6 +27,11 @@
 
 .ParcelMortgageDetail .ongoing p {
   color: var(--light-blue);
+  text-transform: capitalize;
+}
+
+.ParcelMortgageDetail .defaulted p {
+  color: var(--text);
   text-transform: capitalize;
 }
 
@@ -44,4 +49,23 @@
 
 .ParcelMortgageDetail .cta {
   margin-left: auto;
+}
+
+@media(max-width: 768px) {
+  .ParcelMortgageDetail.ui.grid {
+    margin: 1rem;
+  }
+}
+
+
+@media(max-width: 520px) {
+  .ParcelMortgageDetail.ui.grid .row div.column{
+    width: 100% !important;
+    margin-top: 30px;
+    text-align: center;
+  }
+
+  .ParcelMortgageDetail.ui.grid .row div.column:first-child{
+    margin-top: 0;
+  }
 }
