--- a/webapp/src/components/EditParcelPage/EditParcelForm/EditParcelForm.css
+++ b/webapp/src/components/EditParcelPage/EditParcelForm/EditParcelForm.css
@@ -5,3 +5,15 @@
 .EditParcelForm .ui.button + .ui.button {
   margin-left: 20px;
 }
+
+.EditParcelForm .ipns-input .warning.sign {
+  color: var(--yellow);
+}
+
+.EditParcelForm .ipns-input ~ .warning-tooltip {
+  position: absolute;
+  z-index: 99;
+  right: 0;
+  width: 2.6em;
+  height: 2.6em;
+}
